--- a/.github/workflows/ecr.yml
+++ b/.github/workflows/ecr.yml
@@ -30,14 +30,14 @@ jobs:
       with:
         context: .
         push: true
-        tags: 600790893911.dkr.ecr.us-east-1.amazonaws.com/webapp_images
+        tags: 600790893911.dkr.ecr.us-east-1.amazonaws.com/webapp_images:Islamiyat
         
     - name: Build and push MySQL image
       uses: docker/build-push-action@v2
       with:
         context: .
         push: true
-        tags: 600790893911.dkr.ecr.us-east-1.amazonaws.com/mysql_images
+        tags: 600790893911.dkr.ecr.us-east-1.amazonaws.com/mysql_images:Islamiyat
         
 
 env:
